# taskbot-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs  retrix.rs
tests/: integration.rs
